fotos de carrusel con 900px de alto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,12 @@ body{
     color: white;
 }
 
+#carouselExampleFade img{
+    height: 900px; 
+    object-fit: cover;
+    object-position: top;
+}
+
 footer a{
     text-decoration: none;
     color: white;
