--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,6 @@ body{
     }
     
 
-
-
 .card{
     padding: 0;
     border: 1px solid white;
@@ -36,7 +34,7 @@ body{
 }
 
 .card img{
-    height: 10vmax;
+    height: 200px;
     object-fit: cover;
 }
 
