agregado al css scroll-behavior

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
     
 }
 
+html{
+    scroll-behavior: auto !important;
+    /* La opción smooth scroll representa la opción de crear un desplazamiento suave y agradable */
+}
+
 body{
     background-color: black;
     color: white;
