scroll-behavior: smooth

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
 }
 
 /* html{
+    
+    este sí era
+    scroll-behavior: smooth; 
+
+
     scroll-behavior: auto !important;
     La opción smooth scroll representa la opción de crear un desplazamiento suave y agradable
 } */
